Use a stack array for the pending restyles unless there are lots of them.  Bug 403113, r+sr+a=roc